test(cmake): add gtest configuration with tests and minor code adjustment

--- a/examples/files/cpp.html
+++ b/examples/files/cpp.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     $
-        std::cout << "hello from c++" << std::endl;
+        std::cout << "[hello from c++]" << std::endl;
     $
 </body>
 </html>
